--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\HUY\\AppData\\Roaming\\NetBeans\\19\\tomcat101.properties
 j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 10.1
+selected.browser=default
 user.properties.file=C:\\Users\\HUY\\AppData\\Roaming\\NetBeans\\19\\build.properties
